choose file button no longer bleeds outside of button

--- a/client/sentiment-analysis/src/styles/VideoUpload.module.css
+++ b/client/sentiment-analysis/src/styles/VideoUpload.module.css
@@ -20,11 +20,13 @@
 }
 
 .fileInput {
-  font-size: 100px;
+  width: 100%; 
+  height: 100%;
   position: absolute;
   left: 0;
   top: 0;
   opacity: 0;
+  cursor: pointer; 
 }
 
 .button, .uploadButton {
@@ -38,7 +40,11 @@
   cursor: pointer;
   display: inline-block;
   transition: background-color 0.3s, color 0.3s;
+  position: relative;
+
 }
+
+
 
 .button:hover, .uploadButton:hover {
   background-color: #007bff;
